--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,13 @@
     <!--Resets all CSS styles-->
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
     
-    <title>React App</title>
+    <!--Import all fonts here-->
+    <style defer>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@700;900&display=swap');
+    </style>
+
+    <title>BruinPlanner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
